# VideoDownloadStudio

./: .gitignore  README.md  app.py  build_exe.ps1  pyproject.toml  requirements.txt
scripts/: build_release.ps1
src/video_download_studio/: __init__.py  __main__.py  client.py  gui.py
