[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-download-studio"
version = "3.0.0"
description = "Desktop video download and live stream recorder"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.32.0",
  "yt-dlp>=2025.0.0",
  "imageio-ffmpeg>=0.6.0",
  "PySide6>=6.10.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
